--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "supabase:types": "rm ./src/types/db.d.ts && supabase gen types typescript --linked > ./src/types/db.d.ts"
   },
   "dependencies": {
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.39.3",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -24,6 +27,7 @@
     "eslint-config-next": "14.0.4",
     "prettier-plugin-organize-imports": "^3.2.4",
     "sass": "^1.69.7",
+    "supabase": "^1.131.4",
     "typescript": "^5"
   }
 }
