--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "supabase:types": "rm ./src/types/db.d.ts && supabase gen types typescript --linked > ./src/types/db.d.ts"
+    "supabase:types": "rm ./src/types/db.d.ts && supabase gen types typescript --linked > ./src/types/db.d.ts",
+    "types": "tsc --noEmit"
   },
   "dependencies": {
     "@supabase/ssr": "^0.0.10",
